--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             </button>
           </div>
           <button class="profile__add-button">
-            <img src="./images/add logo.svg" alt="add button" />New Post
+            <img src="./images/add logo.svg" alt="add button" />
+            New Post
           </button>
         </section>
         <section class="cards page__section">
