--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
           <img
             src="./images/avatar.jpg"
             alt="avatar image"
-            class="profile__Avatar"
+            class="profile__avatar"
           />
           <div class="profile__column">
-            <h2 class="profile__title">Bessie Coleman</h2>
+            <h1 class="profile__title">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
-            <button class="profile__edit-button">
-              <img src="./images/Group 2.svg" alt="edit button" />Edit Profile
+            <button type="button" class="profile__edit-button">
+              <img src="./images/Group.svg" alt="edit button" />Edit Profile
             </button>
           </div>
-          <button class="profile__add-button">
-            <img src="./images/add logo.svg" alt="add button" />
+          <button type="button" class="profile__add-button">
+            <img src="./images/add-logo.svg" alt="add button" />
             New Post
           </button>
         </section>
