--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Val Thorens</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -55,7 +55,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Restaurant terrace</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -66,7 +66,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">An outdoor cafe</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -79,7 +79,7 @@
                 <h2 class="card__title">
                   A very long bridge, over the forest...
                 </h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -90,7 +90,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Tunnel with morning light</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -101,7 +101,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Mountain house</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
           </ul>
