--- a/index.html
+++ b/index.html
@@ -111,5 +111,6 @@
         <h3 class="footer__title">2023 © Spots</h3>
       </footer>
     </div>
+    <script defer src="./scripts/script.js"></script>
   </body>
 </html>
