--- a/index.html
+++ b/index.html
@@ -110,6 +110,35 @@
       <footer class="footer page__section">
         <h3 class="footer__title">2023 © Spots</h3>
       </footer>
+      <div class="modal modal_opened">
+        <div class="modal__container">
+          <button type="button" class="modal__button-close">
+            <img src="./images/Group 27.svg" alt="close form" />
+          </button>
+          <h2 class="modal__title">Edit Profile</h2>
+          <form class="modal__form">
+            <label for="name" class="modal__label"
+              >Name
+              <input
+                type="text"
+                id="name"
+                class="modal__input"
+                placeholder="Name"
+              />
+            </label>
+            <label for="name" class="modal__label"
+              >Description
+              <input
+                type="text"
+                id="name"
+                class="modal__input"
+                placeholder="Description"
+              />
+            </label>
+            <button type="button" class="modal__button-submit">Save</button>
+          </form>
+        </div>
+      </div>
     </div>
     <script defer src="./scripts/script.js"></script>
   </body>
