--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <footer class="footer page__section">
         <h3 class="footer__title">2023 © Spots</h3>
       </footer>
-      <div class="modal modal_opened">
+      <div class="modal" id="edit-modal">
         <div class="modal__container">
           <button type="button" class="modal__button-close">
             <img src="./images/Group 27.svg" alt="close form" />
