--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 placeholder="Description"
               />
             </label>
-            <button type="button" class="modal__button-submit">Save</button>
+            <button type="submit" class="modal__button-submit">Save</button>
           </form>
         </div>
       </div>
