--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
       <div class="modal" id="edit-modal">
         <div class="modal__container">
           <button type="button" class="modal__button-close">
-            <img src="./images/Group 27.svg" alt="close form" />
+            <img src="./images/Group27.svg" alt="close form" />
           </button>
           <h2 class="modal__title">Edit Profile</h2>
-          <form class="modal__form">
+          <form id="profile-form" class="modal__form">
             <label for="name" class="modal__label"
               >Name
               <input
