--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_is-opened" id="modal-profile-preview">
+      <div class="modal" id="modal-profile-preview">
         <div class="modal__container modal__container_type_preview">
           <button
             type="button"
