--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
                 id="name"
                 class="modal__input"
                 placeholder="Name"
+                minlength="2"
+                maxlength="40"
+                required
               />
+              <span id="name-error" class="modal__error"
+                >Please fill out this field.</span
+              >
             </label>
             <label for="description" class="modal__label"
               >Description
@@ -75,7 +81,14 @@
                 id="description"
                 class="modal__input"
                 placeholder="Description"
+                minlength="2"
+                maxlength="200"
+                required
               />
+              <span id="description-error" class="modal__error"
+                >Please lengthen this text to 2 characters or more (you are
+                currently usina 1 character).</span
+              >
             </label>
             <button type="submit" class="modal__button-submit">Save</button>
           </form>
@@ -99,16 +112,26 @@
                 id="image-link"
                 class="modal__input"
                 placeholder="Paste a link to the picture"
+                required
               />
+              <span id="image-link-error" class="modal__error"
+                >Please enter a URL.</span
+              >
             </label>
             <label for="caption" class="modal__label"
               >Caption
               <input
                 type="text"
                 id="caption"
-                class="modal__input"
+                class="modal__input r"
                 placeholder="Type your caption"
+                minlength="2"
+                maxlength="30"
+                required
               />
+              <span id="caption-error" class="modal__error"
+                >Please fill out this field.</span
+              >
             </label>
             <button type="submit" class="modal__button-submit">Save</button>
           </form>
@@ -132,6 +155,7 @@
         </div>
       </div>
     </div>
+    <script defer src="./scripts/javascript.js"></script>
     <script defer src="./scripts/script.js"></script>
   </body>
 </html>
