--- a/index.html
+++ b/index.html
@@ -114,9 +114,7 @@
                 placeholder="Paste a link to the picture"
                 required
               />
-              <span id="image-link-error" class="modal__error"
-                >Please enter a URL.</span
-              >
+              <span id="image-link-error" class="modal__error"></span>
             </label>
             <label for="caption" class="modal__label"
               >Caption
@@ -129,9 +127,7 @@
                 maxlength="30"
                 required
               />
-              <span id="caption-error" class="modal__error"
-                >Please fill out this field.</span
-              >
+              <span id="caption-error" class="modal__error"></span>
             </label>
             <button type="submit" class="modal__button-submit">Save</button>
           </form>
