--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
       </div>
     </div>
-    <script defer src="./scripts/javascript.js"></script>
+    <script defer src="./scripts/validation.js"></script>
     <script defer src="./scripts/script.js"></script>
   </body>
 </html>
