--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
     <meta name="description" content="Figma project" />
     <meta name="keywords" content="HTML,css" />
     <meta name="author" content="Puja Gupta" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body>
     <div class="page">
@@ -17,11 +15,20 @@
       </header>
       <main class="content">
         <section class="profile page__section">
-          <img
-            src="./images/avatar.jpg"
-            alt="avatar image"
-            class="profile__avatar"
-          />
+          <div class="profile__avatar-container">
+            <button class="profile__avatar-btn">
+              <img
+                src="./images/Group2.svg"
+                alt="pencil icon"
+                class="profile__pencil_icon"
+              />
+            </button>
+            <img
+              src="./images/avatar.jpg"
+              alt="avatar image"
+              class="profile__avatar"
+            />
+          </div>
           <div class="profile__column">
             <h1 class="profile__title">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
@@ -151,7 +158,33 @@
         </div>
       </div>
     </div>
-    <script defer src="./scripts/validation.js"></script>
-    <script defer src="./scripts/script.js"></script>
+    <div class="modal" id="avatar-modal">
+      <div class="modal__container">
+        <button type="button" class="modal__button-close">
+          <img src="./images/Group27.svg" alt="close form" />
+        </button>
+        <h2 class="modal__title">Edit avatar</h2>
+        <form id="edit-avatar-form" class="modal__form">
+          <label for="profile-avatar-input" class="modal__label"
+            >avatar
+            <input
+              type="text"
+              id="edit-avatar-form"
+              class="modal__input"
+              name="avatar"
+              placeholder="Name"
+              minlength="2"
+              maxlength="40"
+              required
+            />
+            <span id="profile-avatar-input-error" class="modal__error"
+              >Please fill out this field.</span
+            >
+          </label>
+
+          <button type="submit" class="modal__button-submit">Save</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
