--- a/src/index.html
+++ b/src/index.html
@@ -11,20 +11,24 @@
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/logo.svg" alt="spot logo" class="header__logo" />
+        <img
+          src="<%=require('./images/logo.svg')%>"
+          alt="spot logo"
+          class="header__logo"
+        />
       </header>
       <main class="content">
         <section class="profile page__section">
           <div class="profile__avatar-container">
             <button class="profile__avatar-btn">
               <img
-                src="./images/Group2.svg"
+                src="<%=require('./images/Group2.svg')%>"
                 alt="pencil icon"
                 class="profile__pencil_icon"
               />
             </button>
             <img
-              src="./images/avatar.jpg"
+              src="<%=require('./images/avatar.jpg')%>"
               alt="avatar image"
               class="profile__avatar"
             />
@@ -33,11 +37,14 @@
             <h1 class="profile__title">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-button">
-              <img src="./images/Group.svg" alt="edit button" />Edit Profile
+              <img
+                src="<%=require('./images/Group.svg')%>"
+                alt="edit button"
+              />Edit Profile
             </button>
           </div>
           <button type="button" class="profile__add-button">
-            <img src="./images/add-logo.svg" alt="add button" />
+            <img src="<%=require('./images/add-logo.svg')%>" alt="add button" />
             New Post
           </button>
         </section>
@@ -62,7 +69,7 @@
       <div class="modal" id="edit-modal">
         <div class="modal__container">
           <button type="button" class="modal__button-close">
-            <img src="./images/Group27.svg" alt="close form" />
+            <img src="<%=require('./images/Group27.svg')%>" alt="close form" />
           </button>
           <h2 class="modal__title">Edit Profile</h2>
           <form id="profile-form" class="modal__form">
@@ -108,7 +115,7 @@
             id="link-button-close"
             class="modal__button-close"
           >
-            <img src="./images/Group27.svg" alt="close form" />
+            <img src="<%=require('./images/Group27.svg')%>" alt="close form" />
           </button>
           <h2 class="modal__title">New post</h2>
           <form id="card-form" class="modal__form">
@@ -147,7 +154,10 @@
             id="preview-button-close"
             class="modal__button-close modal__button-close_type_preview"
           >
-            <img src="./images/Close_Icon_preview.svg" alt="close form" />
+            <img
+              src="<%=require('./images/Close_Icon_preview.svg')%>"
+              alt="close form"
+            />
           </button>
           <img
             class="modal__image"
@@ -161,7 +171,7 @@
     <div class="modal" id="avatar-modal">
       <div class="modal__container">
         <button type="button" class="modal__button-close">
-          <img src="./images/Group27.svg" alt="close form" />
+          <img src="<%=require('./images/Group27.svg')%>" alt="close form" />
         </button>
         <h2 class="modal__title">Edit avatar</h2>
         <form id="edit-avatar-form" class="modal__form">
@@ -181,36 +191,21 @@
               >Please fill out this field.</span
             >
           </label>
-
           <button type="submit" class="modal__button-submit">Save</button>
         </form>
       </div>
     </div>
-    <div class="modal" id="avatar-modal">
+    <div class="modal" id="delete-modal">
       <div class="modal__container">
-        <button type="button" class="modal__button-close">
-          <img src="./images/Group27.svg" alt="close form" />
-        </button>
-        <h2 class="modal__title">Edit avatar</h2>
-        <form id="edit-avatar-form" class="modal__form">
-          <label for="profile-avatar-input" class="modal__label"
-            >avatar
-            <input
-              type="text"
-              id="profile-avatar-input"
-              class="modal__input"
-              name="avatar"
-              placeholder="Name"
-              minlength="2"
-              maxlength="40"
-              required
-            />
-            <span id="profile-avatar-input-error" class="modal__error"
-              >Please fill out this field.</span
-            >
-          </label>
-
-          <button type="submit" class="modal__button-submit">Save</button>
+        <button
+          aria-label="close modal"
+          type="button"
+          class="modal__close"
+        ></button>
+        <h2 class="modal__title">Are you sure you want to delete this card?</h2>
+        <form id="delete-form" class="modal__form">
+          <button type="submit" class="modal__button">Delete</button>
+          <button type="button" class="modal__button">Cancel</button>
         </form>
       </div>
     </div>
